se agrega un boton para el link del portafolio

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a
-              class="nav-link"
+              class="nav-link btn btn-primary"
               href="./portafolio.html"
               style="font-weight: bolder; color: azure"
               >PORTAFOLIO</a
