--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
           id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a
-              class="nav-link btn btn-primary"
+              class="nav-link btn bg-primary custom-button"
+              role="button"
               href="./portafolio.html"
               style="font-weight: bolder; color: azure"
               >PORTAFOLIO</a
