Normalización de la NavBar y creación de NavBar para la página portafolio

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <!-- Barra de navegación -->
-    <nav class="navbar navbar-dark navbar-expand-lg bg-primary navbar-font">
+    <nav class="navbar navbar-dark navbar-expand-lg bg-dark navbar-font">
       <div class="container-fluid">
         <button
           class="navbar-toggler"
