--- a/portafolio.html
+++ b/portafolio.html
@@ -17,6 +17,33 @@
       crossorigin="anonymous"></script>
   </head>
   <body>
+     <!-- Barra de navegación -->
+     <nav class="navbar navbar-dark navbar-expand-lg bg-dark navbar-font">
+      <div class="container-fluid">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse flex-row-reverse"
+          id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a
+              class="nav-link"
+              href="./index.html"
+              style="font-weight: bolder; color: azure"
+              >INICIO</a
+            >
+          </div>
+        </div>
+      </div>
+    </nav>   
     <header class="p-5 bg-primary">
       <div class="d-flex justify-content-center align-items-center">
         <h1 class="fw-bold text-center text-white pb-4 pt-sm-4">PORTAFOLIO</h1>
