--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous" />
+      crossorigin="anonymous"
+    />
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"
+    ></script>
     <title>Curriculum Vitae</title>
   </head>
   <body>
@@ -27,12 +29,14 @@
           data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup"
           aria-expanded="false"
-          aria-label="Toggle navigation">
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div
           class="collapse navbar-collapse flex-row-reverse"
-          id="navbarNavAltMarkup">
+          id="navbarNavAltMarkup"
+        >
           <div class="navbar-nav">
             <a
               class="nav-link"
@@ -51,7 +55,8 @@
       <img
         class="img-fluid px-4 my-5 my-sm-6"
         src="./assets/img/foto de perfil.jpeg"
-        alt="Foto perfil" />
+        alt="Foto perfil"
+      />
       <div class="text-center text-md-start">
         <h1 class="display-1 fw-bold mb-2 me-0" style="color: azure">
           Rower Díaz
@@ -204,13 +209,10 @@
     </main>
 
     <!-- Footer -->
-    <footer>
-      <div
-        class="d-flex justify-content-center align-items-center ps-3 pe-3 pt-sm-3">
-        <p class="p_footer-font text-spacing mb-0 text-white">
-          © 2024 Elaborado por Rower Diaz.
-        </p>
-      </div>
+    <footer class="bg-dark py-2 mt-3">
+      <p class="p_footer-font text-spacing mb-0 text-white text-center">
+        © 2024 Elaborado por Rower Diaz.
+      </p>
     </footer>
   </body>
 </html>
