--- a/portafolio.html
+++ b/portafolio.html
@@ -9,16 +9,18 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous" />
+      crossorigin="anonymous"
+    />
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-     <!-- Barra de navegación -->
-     <nav class="navbar navbar-dark navbar-expand-lg bg-dark navbar-font">
+    <!-- Barra de navegación -->
+    <nav class="navbar navbar-dark navbar-expand-lg bg-dark navbar-font">
       <div class="container-fluid">
         <button
           class="navbar-toggler"
@@ -27,12 +29,14 @@
           data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup"
           aria-expanded="false"
-          aria-label="Toggle navigation">
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div
           class="collapse navbar-collapse flex-row-reverse"
-          id="navbarNavAltMarkup">
+          id="navbarNavAltMarkup"
+        >
           <div class="navbar-nav">
             <a
               class="nav-link"
@@ -43,7 +47,7 @@
           </div>
         </div>
       </div>
-    </nav>   
+    </nav>
     <header class="p-5 bg-primary">
       <div class="d-flex justify-content-center align-items-center">
         <h1 class="fw-bold text-center text-white pb-4 pt-sm-4">PORTAFOLIO</h1>
@@ -58,7 +62,8 @@
             <img
               src="./assets/img/Landing-Page.png"
               class="card-img-top pt-4"
-              alt="foto LandingPage" />
+              alt="foto LandingPage"
+            />
             <div class="card-body card-size">
               <p class="mb-0">
                 <strong>Landing page</strong>
@@ -75,7 +80,8 @@
             <img
               src="./assets/img/iguanas.jpeg"
               class="card-img-top pt-4"
-              alt="Foto-iguanas" />
+              alt="Foto-iguanas"
+            />
             <div class="card-body card-size">
               <p class="mb-0">
                 <strong>Iguanas</strong>
@@ -92,7 +98,8 @@
             <img
               src="./assets/img/imagenCupon.png"
               class="card-img-top pt-4"
-              alt="Foto-cupones" />
+              alt="Foto-cupones"
+            />
             <div class="card-body card-size">
               <p class="mb-0">
                 <strong>Cupones</strong>
@@ -108,7 +115,8 @@
             <img
               src="./assets/img/cv.png"
               class="card-img-top pt-4"
-              alt="Foto-cupones" />
+              alt="Foto-cupones"
+            />
             <div class="card-body card-size">
               <p class="mb-0">
                 <strong>Curriculum</strong>
@@ -118,15 +126,12 @@
           </div>
         </div>
       </div>
-      <br />
-      <button>
-        <a
-          href="./index.html"
-          target="_blank"
-          class="btn btn-sm btn-lg btn-block">
-          Volver al inicio
-        </a>
-      </button>
     </main>
+    <!-- Footer -->
+    <footer class="bg-dark py-2 mt-3">
+      <p class="p_footer-font text-spacing mb-0 text-white text-center">
+        © 2024 Elaborado por Rower Diaz.
+      </p>
+    </footer>
   </body>
 </html>
